fix another css whitespace selector

--- a/style.css
+++ b/style.css
@@ -368,13 +368,9 @@ h1{font-size: 7em;font-family: 'black', cursive;}
 		font-weight: 600;
 		margin: 0;
 	}
-
-	.name.arvo {
-		white-space: normal;
-	}
 	/*@media all and (min-width: 0px) and (max-width: 992px){
 	.name{white-space: break-spaces;}
-}*/
+	}*/
 	.text-2{
 		text-align: center;
 		color: #A46A37;
